<resources>
    <string name="app_name" translatable="false">MyQoran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">MyQoran</string>
    <string name="menu_read" translatable="false">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="txt_salam" translatable="false">Assalamu\'alaikum</string>
    <string name="txt_recent_read">Recent Read</string>
    <string name="txt_slide_down_pls">Slide down to start reading Quran</string>
    <string name="nav_read_fragment">Read Page</string>
    <string name="txt_english">English</string>
    <string name="txt_status_activated">Status: Activated</string>
    <string name="txt_status_deactivated">Status: Deactivated</string>
    <string name="txt_activated">Activate</string>
    <string name="txt_deactivated">Deactivate</string>
    <string name="txt_question_read_mode">Activate focus read mode?</string>
    <string name="txt_question_select_lang">Choose Language</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_ganti_tema">Change Theme</string>
    <string name="txt_description_change_theme">Customize app theme as you like</string>
    <string name="txt_choose_lang">Language</string>
    <string name="txt_desc_lang">Set language for translation and footnote</string>
    <string name="txt_text_size_header">Text size per ayah</string>
    <string name="txt_focus_read_mode">Focus Read Mode</string>
    <string name="txt_deactivate_tajweed">Deactivate Tajweed</string>
    <string name="txt_desc_deactivate_tajweed">Deactivate if tajwid bother your reading experience</string>
    <string name="txt_desc_darkmode_settings">Change background to dark</string>
    <string name="txt_play_all_ayah">Play All Ayah</string>
    <string name="txt_sholat_schedule">Sholat Schedule</string>
    <string name="txt_bookmark_empty">You haven\'t added some bookmarks</string>
    <string name="txt_bookmark_removed">Bookmark Removed</string>
    <string name="txt_display">Display</string>
    <string name="txt_read_settings">Reading Settings</string>
    <string name="txt_read_by_surah">Read by Surah</string>
    <string name="txt_read_by_jozz">Read by Juz</string>
    <string name="txt_read_by_page">Read by Page</string>
    <string name="txt_error_occurred">Error Occurred</string>
    <string name="txt_ayah">Ayah</string>
    <string name="txt_succeed_copy_ayah">Ayah successfully copied</string>
    <string name="txt_current_qari">Current Qari:</string>
    <string name="txt_def_color">Default (Purple)</string>
    <string name="txt_blue_color">Blue</string>
    <string name="txt_green_color">Green</string>
    <string name="txt_red_color">Red</string>
    <string name="txt_play_ayah">Putar Ayat</string>
    <string name="txt_copy_ayah">Salin</string>
    <string name="txt_share_ayah">Bagikan</string>
    <string name="txt_bookmark_ayah">Bookmark</string>
    <string name="txt_search_ayah">Search Ayah…</string>
    <string name="txt_search_surah">Search Surah…</string>
    <string name="menu_kiblat">Cari Kiblat</string>
</resources>