<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rmaproject.myqoran.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_read_fragment"
            app:destination="@id/nav_read_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rmaproject.myqoran.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.rmaproject.myqoran.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        tools:layout="@layout/fragment_read_quran"
        android:id="@+id/nav_read_fragment"
        android:name="com.rmaproject.myqoran.ui.read.ReadFragment"
        android:label="@string/nav_read_fragment" />
</navigation>