<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_default_colour"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="36dp"
                android:src="@drawable/ic_baseline_circle_24"
                android:layout_height="36dp"
                app:tint="@color/defaultColour" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/txt_def_color"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_blue_colour"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="36dp"
                android:src="@drawable/ic_baseline_circle_24"
                android:layout_height="36dp"
                app:tint="@color/blueColour" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/txt_blue_color"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_green_colour"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="36dp"
                android:src="@drawable/ic_baseline_circle_24"
                android:layout_height="36dp"
                app:tint="@color/greenColour" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/txt_green_color"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_red_colour"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="36dp"
                android:src="@drawable/ic_baseline_circle_24"
                android:layout_height="36dp"
                app:tint="@color/redColour" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center_vertical|start"
                android:layout_height="match_parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:text="@string/txt_red_color"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        app:backgroundTint="?colorError"
        android:textColor="?colorOnError"
        android:text="@string/txt_cancel"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"/>

</LinearLayout>